--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
 </head>
 <body>
     <h1>Water Fun Facts!</h1>
+    <p>30% of fresh water is in the ground.</p>
+    <p>1.7% of the world’s water is frozen and therefore unusable.</p>
+    <p>Approximately 400 billion gallons of water are used in the United States per day</p>
+    <p>In one year, the average American residence uses over 100,000 gallons (indoors and outside).</p>
+    <p>Water can dissolve more substances than any other liquid including sulfuric acid.</p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
 
 </body>
 </html>
