--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Water</title>
+    <link rel="stylesheet" href="water.css" />
 </head>
 <body>
     <h1>Water Fun Facts!</h1>
