Auto stash before merge of "master" and "origin/master"

--- a/index.html
+++ b/index.html
@@ -26,27 +26,32 @@
       <br>
       <br>
 
+    <h1>
+            <span>H</span>
+            <span>2</span>
+            <span>O</span>
+    </h1>
+    <h1>Water Fun Facts!</h1>
     <p>30% of fresh water is in the ground.</p>
     <p>1.7% of the world’s water is frozen and therefore unusable.</p>
     <p>Approximately 400 billion gallons of water are used in the United States per day</p>
     <p>In one year, the average American residence uses over 100,000 gallons (indoors and outside).</p>
     <p>Water can dissolve more substances than any other liquid including sulfuric acid.</p>
-
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
+    <p>Water weighs about 8 pounds a gallon.</p>
+    <p>70% of the human brain is water.</p>
+    <p>Up to 50% of water is lost through leaks in cities in the developing world.</p>
+    <p>40 billion hours are spent collecting water in Africa alone.</p>
+    <p>Water expands by 9% when it freezes.</p>
+    <p>300 tons of water are required to manufacture 1 ton of steel.</p>
+    <p>1 in 6 gallons of water leak from utility pipes before reaching customers in the US</p>
+    <p>It takes more than twice the amount of water to produce coffee than it does tea.</p>
+    <p>Water regulates the Earth’s temperature.</p>
+    <p>On average, 10 gallons per day of your water footprint (or 14% of your indoor use) is lost to leaks.</p>
+    <p>It takes about 70 gallons of water to fill a bathtub.</p>
+    <p>Only 0.007 percent of the planet’s water is available to fuel and feed its 6.8 billion people.</p>
+    <p>65% of freshwater withdrawals in China are used for agriculture.2</p>
+    <p>Water is the most common substance found on earth.</p>
+    <p>Drinking too much water can be fatal (known as water intoxication).</p>
 
 </body>
 </html>
