--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 
- <audio controls>
-  <source src="horse.ogg" type="audio/ogg">
-  <source src="horse.mp3" type="audio/mpeg">
+ <audio controls autoplay>
+  <source src="Heavy Rain Lofi HipHop.mp3" type="audio/mp3">
+
  Your browser does not support the audio element.
-</audio>
+</audio style="padding-left: 50px"; />
 
 <div class="typewriter">
         <h1>Let's Talk About Water.</h1>
