Revert "Fixed the audio controls"
This reverts commit 205a7b07479cf65bf20adf5b893fe72690713d23.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <source src="Heavy Rain Lofi HipHop.mp3" type="audio/mp3">
 
  Your browser does not support the audio element.
-audio/>
+</audio style="padding-left: 50px"; />
 
 <div class="typewriter">
         <h1>Let's Talk About Water.</h1>
