Added all Arrays

--- a/index.html
+++ b/index.html
@@ -21,15 +21,7 @@
 
       <br>
       <br>
-      <br>
-      <br>
-<<<<<<< Updated upstream
-
-=======
-      <br>
-      <br>
 <!-- Evelyn Duarte: The span elemets are only used to seperate the H, 2 and O. Then, a heading is used to say water fun facts. After the actual facts are only placed in a paragraph tag. -->
->>>>>>> Stashed changes
     <h1>
             <span>H</span>
             <span>2</span>
@@ -56,6 +48,21 @@ function myFunction() {
   idArray [3] = "Third paragraph text"
   idArray [4] = "Fourth paragraph text"
   idArray [5] = "Fifth paragraph text"
+  idArray [6] = "Fifth paragraph text"
+  idArray [7] = "Fifth paragraph text"
+  idArray [8] = "Fifth paragraph text"
+  idArray [9] = "Fifth paragraph text"
+  idArray [10] = "Fifth paragraph text"
+  idArray [11] = "Fifth paragraph text"
+  idArray [12] = "Fifth paragraph text"
+  idArray [13] = "Fifth paragraph text"
+  idArray [14] = "Fifth paragraph text"
+  idArray [15] = "Fifth paragraph text"
+  idArray [16] = "Fifth paragraph text"
+  idArray [17] = "Fifth paragraph text"
+  idArray [18] = "Fifth paragraph text"
+  idArray [19] = "Fifth paragraph text"
+  idArray [20] = "Fifth paragraph text"
 
   document.getElementById("select").onclick = myFunction;
   randomParagraph = Math.floor(Math.random()*5);
