--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <h1>Water Fun Facts!</h1>
 
-    <button onclick="myFunction()" id="select">Pick text</button>
+    <button onclick="myFunction()" id="select">Click here to learn about water</button>
   <div class="main">
     <p id="result"></p>
   </div>
